--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -32,10 +32,11 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  overflow: hidden;
   .homeBlock{
     background: #fff;
     width: 50%;
-    min-height: 60%;
+    min-height: 70%;
     text-align: center;
     border-radius: 60px;
     display: flex;
@@ -54,8 +55,7 @@
       margin-bottom: 0;
     }
     h2{
-      font-size: 36px;
-
+      font-size: 42px;
     }
     h3.valentineText{
       font-size: 28px;
@@ -67,6 +67,7 @@
       gap: 50px;
       justify-content: center;
       align-items: center;
+      animation: fade 2s linear;
       button{
         width: 150px;
         height: 50px;
@@ -115,6 +116,15 @@
     display: block;
     position: absolute;
 
+  }
+
+  @keyframes fade {
+    from {
+      opacity: 0;
+    }
+    to{
+      opacity: 1;
+    }
   }
 
 
