last push for check

--- a/src/components/GiftMusicPlayer/GiftMusicPlayer.module.scss
+++ b/src/components/GiftMusicPlayer/GiftMusicPlayer.module.scss
@@ -167,6 +167,22 @@
       }
     }
   }
+  .musicTitle{
+    button{
+      background: #ff4ecd;
+      color:#fff;
+      margin-bottom: 20px;
+      font-size: 12px;
+    }
+    a{
+      background: #fff;
+      color: #9e39f1;
+      padding: 6px;
+      border-radius: 5px;
+      margin-top: 30px;
+      font-size: 12px;
+    }
+  }
 }
 
 
