--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -36,7 +36,7 @@
   .homeBlock{
     background: #fff;
     width: 50%;
-    min-height: 70%;
+    height: 75vh;
     text-align: center;
     border-radius: 60px;
     display: flex;
@@ -56,6 +56,7 @@
     }
     h2{
       font-size: 42px;
+      margin: 0;
     }
     h3.valentineText{
       font-size: 28px;
@@ -91,6 +92,8 @@
 .valentine{
   position: relative;
   width: 100%;
+  height: 100%;
+
   img{
     max-width: 300px;
     max-height: 200px;
