--- a/src/components/GiftMusicPlayer/GiftMusicPlayer.module.scss
+++ b/src/components/GiftMusicPlayer/GiftMusicPlayer.module.scss
@@ -22,7 +22,7 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   .close{
     position: absolute;
     cursor: pointer;
