--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -35,7 +35,7 @@
   overflow: hidden;
   .homeBlock{
     background: #fff;
-    width: 50%;
+    width: 60%;
     height: 75vh;
     text-align: center;
     border-radius: 60px;
@@ -48,6 +48,14 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    .willBeBlock{
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      padding-top: 5%;
+      align-items: center;
+    }
     h1{
       font-size: 52px;
       color: #fff;
@@ -70,6 +78,9 @@
       align-items: center;
       animation: fade 2s linear;
       button{
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 150px;
         height: 50px;
         color: #fff;
@@ -134,7 +145,7 @@
 
 
 
-@media screen and (max-width: 1400px){
+@media screen and (max-width: 1500px){
   .welcomeWrapper{
     .text{
       display: flex;
@@ -152,9 +163,7 @@
   .homeWrapper{
     .homeBlock{
       width: 60%;
-      min-height: 60%;
       border-radius: 40px;
-      background-position: 0;
       h1{
         font-size: 48px;
         color: #fff;
@@ -194,4 +203,138 @@
     }
   }
 }
+
+@media screen and (max-width: 1000px){
+  .welcomeWrapper{
+    h1{
+      font-size: 50px;
+    }
+
+    a{
+      padding: 10px 30px;
+      font-size: 14px;
+      border-radius: 14px;
+    }
+  }
+
+  .homeWrapper{
+    .homeBlock{
+      width: 70%;
+      border-radius: 40px;
+      .buttonsBlock{
+        .yes{
+          left: 20%;
+        }
+        .no{
+          right: 20%;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 756px){
+  .welcomeWrapper{
+    .text{
+      gap: 20px;
+    }
+    h1{
+      font-size: 36px;
+    }
+
+    a{
+      padding: 8px 20px;
+      font-size: 12px;
+      border-radius: 8px;
+    }
+  }
+  .homeWrapper{
+    .homeBlock{
+      width: 80%;
+      border-radius: 25px;
+      .willBeBlock{
+        padding-top: 20%;
+      }
+      .buttonsBlock{
+        button{
+          width: 100px;
+          height: 45px;
+          bottom: 150px;
+        }
+        .yes{
+          left: 20%;
+        }
+        .no{
+          right: 20%;
+        }
+      }
+    }
+    .valentine{
+      h1{
+        font-size: 44px;
+      }
+      h2{
+        font-size: 26px;
+        margin-top: 25px;
+      }
+      .valentineText{
+        font-size: 18px !important;
+      }
+      h5{
+        font-size: 12px;
+      }
+      h3{
+        font-size: 18px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 456px){
+  .welcomeWrapper{
+    h1{
+      font-size: 30px;
+    }
+
+    a{
+      padding: 8px 15px;
+      font-size: 10px;
+      border-radius: 6px;
+    }
+  }
+
+  .homeWrapper{
+    .homeBlock{
+      border-radius: 20px;
+      .willBeBlock{
+        padding-top: 50%;
+        h1{
+          font-size: 36px;
+        }
+        h2{
+          font-size: 20px;
+        }
+      }
+      .valentine{
+        img{
+          max-width: 170px;
+        }
+        h1{
+          font-size: 38px;
+        }
+        h2{
+          font-size: 20px;
+          margin-top: 30px;
+        }
+        .valentineText{
+          font-size: 16px !important;
+        }
+        h3{
+          font-size: 16px;
+        }
+      }
+    }
+  }
+}
+
 
